testdata/prettier/w-if-miss-stmt.out
Syntax error: "./testdata/prettier/w-if-miss-stmt.goat" (line 4, column 5):
unexpected fi
expecting atomic statement or composite statement
