testdata/prettier/w-if-miss-stmt.goat
proc main()
begin
if a>2 then
    fi
end
